Fixed dependency on obsolete synthetic data. Tidying.